minikube_kong_grpc/service_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcbin
  annotations:
    konghq.com/protocols: grpc
  labels:
    app: grpcbin
spec:
  ports:
  - name: insecure
    port: 9000
  - name: secure
    port: 9001
  selector:
    app: grpcbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcbin
  template:
    metadata:
      labels:
        app: grpcbin
    spec:
      containers:
      - image: moul/grpcbin # https://hub.docker.com/r/moul/grpcbin
        name: grpcbin
        ports:
        - containerPort: 9000
