minikube_kong_grpc/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-grpc
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: grpcbin
          servicePort: 9000
